// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Track renders favourite 1`] = `
<td
  class=""
>
  <div>
    <span
      class="glyphicon glyphicon-star"
      data-testid="StarIcon"
    />
    <span>
       
    </span>
  </div>
</td>
`;

exports[`components/columns/Track renders no own or fave 1`] = `
<td
  class=""
>
  <div>
    <span>
       
    </span>
  </div>
</td>
`;

exports[`components/columns/Track renders ownership 1`] = `
<td
  class="success"
>
  <div>
    <span>
       
    </span>
  </div>
</td>
`;
